--- a/CapstoneProject/Views/Movie/Index.cshtml
+++ b/CapstoneProject/Views/Movie/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!doctype html>
+﻿@model CapstoneProject.Models.MoviesViewModel
+
+<!doctype html>
 <html lang="en">
 <head>
     <title>@ViewData["Title"] = "Movies";</title>
@@ -14,15 +16,11 @@
 </head>
 
 <body>
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
+    <section class="text-center container">
+        <div class="row">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Movies</h1>
-                <p class="lead text-body-secondary">Movie list and search result are displayed in this page.</p>
-                <p>
-                    <a href="#" class="btn btn-primary my-2">button1</a>
-                    <a href="#" class="btn btn-secondary my-2">button2</a>
-                </p>
+                <p class="lead text-body-secondary">Search for Movies and the results will be displayed</p>
             </div>
         </div>
     </section>
@@ -31,10 +29,14 @@
     <div class="container mt-3 text-center">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-4">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Search for movies...">
-                    <button class="btn btn-primary" type="button">Search</button>
-                </div>
+                 @using (Html.BeginForm("FilterMovies", "Movie", FormMethod.Get, new {id = "searchForm"}))
+                {
+                    <div class="input-group mb-3">
+                        <input type="text" name="searchString" id="searchString" class="form-control" placeholder="Search for movies...">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </div>
+                }
+
             </div>
             <div class="col-md-8">
                 <div class="filter-row d-flex mb-3">
@@ -193,144 +195,35 @@
         <div class="container">
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="https://m.media-amazon.com/images/M/MV5BM2E0NjA5MDktYmUxOC00NWUzLWJlNzMtZmJlNjU1ODZiMjgyXkEyXkFqcGdeQXVyMTY3ODkyNDkz._V1_.jpg" class="bd-placeholder-img card-img-top" alt="Taylor Swift the Eras Tour" width="100%" height="500">
-                        <div class="card-body">
-                            <p class="card-text">Taylor Swift the Eras Tour</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Trailer</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
-                                </div>
-                                <small class="text-body-secondary">Ticket Available</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="https://movieplayer.net-cdn.it/t/images/2023/08/29/poster_killers_of_the_flower_moon_jpg_1600x900_crop_q85.jpg" class="bd-placeholder-img card-img-top" alt="Killers of the Flower Moon" width="100%" height="500">
-                        <div class="card-body">
-                            <p class="card-text">Killers of the Flower Moon</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Trailer</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
-                                </div>
-                                <small class="text-body-secondary">Ticket Available</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="https://m.media-amazon.com/images/M/MV5BMDBiYmRkNjUtYzc4My00NGFiLWE2NWUtMGU1ZDA1NTQ3ZjQwXkEyXkFqcGdeQXVyMTM1NjM2ODg1._V1_FMjpg_UX1000_.jpg" class="bd-placeholder-img card-img-top" alt="Anatomy of a Fall" width="100%" height="500">
-                        <div class="card-body">
-                            <p class="card-text">Anatomy of a Fall</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Trailer</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
-                                </div>
-                                <small class="text-body-secondary">Movie Straming Online</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: " preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">title</text></svg>
-                        <div class="card-body">
-                            <p class="card-text">card text</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">button1</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">button2</button>
+                <!-- loop -->
+                @if (Model.LocalMovies.Any())
+                {
+                    @foreach (var movie in Model.LocalMovies.OrderByDescending(m => m.ReleaseDate))
+                    {
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img src="@movie.PosterImageUrl" class="bd-placeholder-img card-img-top" alt="@movie.Title" width="100%" height="500">
+                                <div class="card-body">
+                                    <p class="card-text">@movie.Title</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Trailer</button>
+                                            <a asp-controller="Movie" asp-action="SingleMovie" asp-route-id="@movie.Id">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary" >Details</button>
+                                            </a>
+                                        </div>
+                                        <small class="text-body-secondary">Ticket Available</small>
+                                    </div>
                                 </div>
-                                <small class="text-body-secondary">9 small text body</small>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: " preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">title</text></svg>
-                        <div class="card-body">
-                            <p class="card-text">card text</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">button1</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">button2</button>
-                                </div>
-                                <small class="text-body-secondary">9 small text body</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: " preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">title</text></svg>
-                        <div class="card-body">
-                            <p class="card-text">card text</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">button1</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">button2</button>
-                                </div>
-                                <small class="text-body-secondary">9 small text body</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: " preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">title</text></svg>
-                    <div class="card-body">
-                        <p class="card-text">card text</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">button1</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">button2</button>
-                            </div>
-                            <small class="text-body-secondary">9 small text body</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-                <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: " preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">title</text></svg>
-                    <div class="card-body">
-                        <p class="card-text">card text</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">button1</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">button2</button>
-                            </div>
-                            <small class="text-body-secondary">9 small text body</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-                <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: " preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">title</text></svg>
-                    <div class="card-body">
-                        <p class="card-text">card text</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">button1</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">button2</button>
-                            </div>
-                            <small class="text-body-secondary">9 small text body</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
+                    }
+                }
+                else
+                {
+                    <p>No Movies Found!</p>
+                }
         </div>
     </div>
 
